--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1252,7 +1252,7 @@ div[style='z-index: 1000001;'],
 }
 
 #nprogress .bar {
-  @apply !z-[9999] !bg-primary;
+  @apply !z-[9999];
 }
 
 /* ................................................... */
