--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,33 @@
 /* @import './react-big-calendar.css';
 @import 'react-calendar/dist/Calendar.css'; */
 
+/* ***** ZOHO Recruit css starts ***** */
+@import url('https://static.zohocdn.com/recruit/embed_careers_site/css/v1.1/embed_jobs.css');
+
+.embed_jobs_head {
+  background-color: transparent;
+}
+
+.embed_jobs_head2 {
+  width: 100%;
+  border: none;
+  padding: 0;
+  font: var(--font-nunito);
+  position: static;
+  overflow: hidden;
+  min-height: 200px !important;
+}
+
+.rec_filter_cls:nth-child(2) {
+  display: none !important;
+}
+
+.cw-easyapply-loading {
+  display: none !important;
+}
+
+/* ***** ZOHO Recruit css ends ***** */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -1617,11 +1644,10 @@ div[style='z-index: 1000001;'],
   z-index: 2247483648;
 }
 
-
 html {
-  --cursor-color: #1a5a97
+  --cursor-color: #1a5a97;
 }
 
 html.dark-mode {
-  --cursor-color: #fff
+  --cursor-color: #fff;
 }
