--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,7 +34,7 @@
   }
   h2 {
     /* @apply text-3xl dark:text-gray-800 2xl:text-[26px] 4xl:text-3xl; */
-    @apply pt-[0.25rem] font-poppins text-[1.6rem] font-semibold text-[#000000] md:text-[2.188rem] md:leading-[2rem] lg:leading-[3.125rem];
+    @apply pt-[0.25rem] font-poppins text-[1.6rem] font-semibold text-[#000000] md:text-[2.188rem] leading-[2rem] md:leading-[2.75rem] lg:leading-[3.125rem];
   }
 
   h3 {
