--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,11 +30,11 @@
   }
 
   h1 {
-    @apply font-poppins text-[1.8rem] font-bold leading-10 text-[#000000] md:text-[2.5rem] md:leading-[3rem] lg:text-[3.75rem] lg:leading-[4.65rem];
+    @apply font-poppins text-[1.8rem] font-bold leading-10 text-[#000000] md:text-[2.5rem] md:leading-[3rem] lg:text-[2.125rem] lg:leading-[2.8rem] xl:text-[3.75rem] xl:leading-[4.65rem];
   }
   h2 {
     /* @apply text-3xl dark:text-gray-800 2xl:text-[26px] 4xl:text-3xl; */
-    @apply pt-[0.25rem] font-poppins text-[1.6rem] font-semibold text-[#000000] md:text-[2.188rem] leading-[2rem] md:leading-[2.75rem] lg:leading-[3.125rem];
+    @apply pt-[0.25rem] font-poppins text-[1.6rem] font-semibold leading-[2rem] text-[#000000] md:leading-[2.75rem] lg:text-[1.8rem] lg:leading-[2.5rem] xl:text-[2.188rem] xl:leading-[3.125rem];
   }
 
   h3 {
@@ -54,10 +54,10 @@
   }
 
   p {
-    @apply font-montserrat text-xs font-normal leading-[26px] text-[#000000] md:text-[18px];
+    @apply font-montserrat text-[14px] font-normal leading-[26px] text-[#000000] xl:text-[18px];
   }
   span {
-    @apply text-xxs md:text-xs;
+    @apply text-xxs xl:text-xs;
   }
 }
 
